<resources>
    <string name="app_name">Myint Thidar</string>
    <string name="title_activity_specification">ActivitySpecification</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--for bottom name customer-->

    <string name="title_rank">Home</string>
    <string name="title_history">History</string>
    <string name="title_order">Order</string>
    <string name="title_notification">Notifications</string>
    <string name="title_setting">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sales">SalesActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_scan_for_voucher">ScanForVoucherActivity</string>


    <string name="pref_file">asia.nainglintun.myintthitar.preference_file</string>
    <string name="pref_login_status">asia.nainglintun.myinthidar.preference_login_status</string>

    <string name="pref_user_name">asia.nainglintun.myinthidar.preference_user_name</string>


    <string name="pref_row_user">asia.nainglintun.myinthidar.preference_row_user</string>
    <string name="multi_select_dialog_title">Select Sale Member</string>


</resources>
