<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_persona"
        android:title="@string/title_rank" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_script"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_content_left"
        android:title="@string/title_order" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_cog"
        android:title="@string/title_setting" />

</menu>
